--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Bacon Hub</title>
+        <title>Owl Hub</title>
 
         <meta charset = "utf-8">
 		<link rel = "shortcut icon" type = "image/x-icon" href="Logo.ico" />
 
-		<meta name = "author" content = "BaconHub" />
-		<meta name = "description" content = "BaconHub" />
-		<meta name = "keywords" content = "BaconHub" />
+		<meta name = "author" content = "Owl Hub" />
+		<meta name = "description" content = "Owl Hub" />
+		<meta name = "keywords" content = "Owl, Hub, OwlHub, script, lua, krnl" />
 
-		<meta property = "og:title" content = "BaconHub" />
-		<meta property = "og:description" content = "Official website for BaconHub" />
+		<meta property = "og:title" content = "Owl Hub" />
+		<meta property = "og:description" content = "Official website for Owl Hub" />
 		<meta property = "og:type" content = "website" />
-		
+		<meta property = "og:url" content = "https://owlhub.ga" />
+		<meta property = "og:secure_url" content = "https://owlhub.ga">
+		<meta property = "og:image" content = "https://owlhub.ga/Logo.ico" />
+
         <style>
             body {
 				background-color: rgb(25, 25, 25);
