--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">Exploits</h1>
-            <i style="color: rgb(180, 180, 180);"><a href="https://x.synapse.to/" target = "_blank" style="color: rgb(180, 180, 180);">Synapse X</a><br><br><a href="https://elymltd.selly.store/product/a6576d71/" target = "_blank" style="color: rgb(180, 180, 180);">Sentinel</a><br><br><a href="https://www.sirhurt.net/" target = "_blank" style="color: rgb(180, 180, 180);">Sirhurt</a><br><br><a href="https://krnl.rocks/" target = "_blank" style="color: rgb(180, 180, 180);">Krnl</a></i>a 
+            <i style="color: rgb(180, 180, 180);"><a href="https://x.synapse.to/" target = "_blank" style="color: rgb(180, 180, 180);">Synapse X</a><br><br><a href="https://elymltd.selly.store/product/a6576d71/" target = "_blank" style="color: rgb(180, 180, 180);">Sentinel</a><br><br><a href="https://www.sirhurt.net/" target = "_blank" style="color: rgb(180, 180, 180);">Sirhurt</a><br><br><a href="https://krnl.rocks/" target = "_blank" style="color: rgb(180, 180, 180);">Krnl</a></i>
             <div id="detailLine"></div>
             <br>
             <h1 style="font-family: monospace;">Games</h1>
